@@ -239,6 +239,9 @@
                             }
                         }
                     ]
+                },
+                "transaction": {
+                    "id": "945254c5-67a5-417e-8a4e-aa29efcbfb79"
                 }
             },
             "processor": {
